styles: Replace deprecated Less `.transform()` mixin with standard CSS
Replacing Less mixin calls of `.transform()` and
`transition-transform()`, deprecated since MW 1.37,
with standard CSS property.

Bug: T308360
Change-Id: If275a45638809373742907995760850d1857d672

--- a/modules/ext.growthExperiments.HelpPanel/HelpPanelPopup.less
+++ b/modules/ext.growthExperiments.HelpPanel/HelpPanelPopup.less
@@ -1,5 +1,4 @@
 @import 'mediawiki.ui/variables';
-@import 'mediawiki.mixins';
 @import '../utils/variables.less';
 
 @help-panel-position-bottom: 6em;
@@ -19,7 +18,7 @@
 	border-radius: 2px;
 	border: 1px solid @colorGray12;
 	box-shadow: 0 2px 2px 0 rgba( 0, 0, 0, 0.25 );
-	.transition( bottom @help-panel-transition-duration ~',' opacity @help-panel-transition-duration );
+	transition: bottom @help-panel-transition-duration, opacity @help-panel-transition-duration;
 	position: relative;
 	bottom: -@help-panel-position-bottom - 1em;
 	opacity: 0;
@@ -31,7 +30,7 @@
 }
 
 .mw-ge-help-panel-popup-guidance .oo-ui-dialog {
-	.transition( none );
+	transition: none;
 	animation: slide-in-guidance 800ms;
 }
 
