--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/StartEditingDialog.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/StartEditingDialog.less
@@ -224,7 +224,7 @@
 				.oo-ui-labelWidget {
 					// HACK use transition instead of animation for moving text left, so that the
 					// animation doesn't happen when suggestions are revealed with "show more"
-					.transition-transform( 200ms );
+					transition: transform 200ms;
 					animation: none;
 				}
 			}
