--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/SuggestionWidget.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/SuggestionWidget.less
@@ -1,4 +1,3 @@
-@import 'mediawiki.mixins';
 @import 'mediawiki.ui/variables';
 
 // Copied from the MachineVision extension
@@ -35,7 +34,6 @@
 	}
 
 	.mw-ge-suggestion {
-		.transition( color @transition-duration-base );
 		background-color: @base90;
 		border: @suggestion-border-width solid @base50;
 		color: @base10;
@@ -43,6 +41,7 @@
 		padding: 6px 20px;
 		border-radius: 18px;
 		white-space: nowrap;
+		transition: color @transition-duration-base;
 
 		&:hover,
 		&:focus {
@@ -60,14 +59,14 @@
 		.oo-ui-labelWidget {
 			@keyframes slideLeft {
 				0% {
-					.transform( translateX( 0 ) );
+					transform: translateX( 0 );
 				}
 
 				100% {
-					.transform( translateX( -10px ) );
+					transform: translateX( -10px );
 				}
 			}
-			.transform( translateX( -10px ) );
+			transform: translateX( -10px );
 			animation: slideLeft 0.2s;
 		}
 
@@ -89,11 +88,11 @@
 		.oo-ui-labelWidget {
 			@keyframes slideRight {
 				0% {
-					.transform( translateX( -0.5em ) );
+					transform: translateX( -0.5em );
 				}
 
 				100% {
-					.transform( translateX( 0 ) );
+					transform: translateX( 0 );
 				}
 			}
 			animation: slideRight 0.2s;
