Reduce size of intro-heart-article.svg
As per comments in T301537#7998740 convert the svg to
png until a reduced size svg is created. Original
svg file is 114 KB, optimised png is 52KB.

Bug: T301537
Change-Id: I3a48ddf97e7eaa2b25fa46e540a4ac3af6baa1bf

--- a/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
+++ b/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
@@ -21,7 +21,7 @@
 
 .mw-ge-donorsignup-block {
 	width: 400px;
-	background-image: url( ../../images/intro-heart-article.svg );
+	background-image: url( ../../images/intro-heart-article.png );
 	background-size: 255px auto;
 	background-position: top center;
 	background-repeat: no-repeat;
