--- a/modules/ext.growthExperiments.Homepage.styles/ImpactModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/ImpactModule.less
@@ -84,7 +84,8 @@
 		&-image {
 			width: 160px;
 			height: 130px;
-			background: url( ../../images/intro-heart-article.svg ) no-repeat center;
+			background: url( ../../images/intro-heart-article.png ) no-repeat center;
+			background-size: cover;
 		}
 
 		&-subheader,
@@ -176,7 +177,8 @@
 		&-image {
 			.filter( drop-shadow( 0 0 2px rgba( 0, 0, 0, 0.25 ) ) );
 			min-width: 64px;
-			background: url( ../../images/intro-heart-article.svg ) no-repeat top;
+			background: url( ../../images/intro-heart-article.png ) no-repeat top;
+			background-size: cover;
 			margin-right: 16px;
 		}
 
