Limit ask panel textarea resizing to vertical
Bug: T312297
Change-Id: I485210b2307157d11cc117e7cc581a4aa9cca20a

--- a/modules/ext.growthExperiments.Help/AskHelpPanel.less
+++ b/modules/ext.growthExperiments.Help/AskHelpPanel.less
@@ -12,5 +12,9 @@
 		.mw-ge-askHelpPanel-copyright {
 			.rel-font-size-and-line-height( @parentFontSize: 14px, @targetFontSize: 12.4px, @targetLineHeight: 17.3px );
 		}
+
+		textarea {
+			resize: vertical;
+		}
 	}
 }
