--- a/modules/ext.growthExperiments.Homepage.styles/ImpactModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/ImpactModule.less
@@ -178,7 +178,7 @@
 			.filter( drop-shadow( 0 0 2px rgba( 0, 0, 0, 0.25 ) ) );
 			min-width: 64px;
 			background: url( ../../images/intro-heart-article.png ) no-repeat top;
-			background-size: cover;
+			background-size: contain;
 			margin-right: 16px;
 		}
 
