Enforce a selector class pattern in vue modules
Bug: T314074
Change-Id: Ia3065729d60e373511c583607bc87d749d0ff550

--- a/modules/ext.growthExperiments.MentorDashboard.Vue/components/variables.less
+++ b/modules/ext.growthExperiments.MentorDashboard.Vue/components/variables.less
@@ -40,3 +40,13 @@
 	border-radius: @border-radius-base;
 	background-color: @background-color-base;
 }
+
+.no-gutter() {
+	margin: 0;
+	padding: 0;
+}
+
+// Helpers
+.ext-growthExperiments-utils__pull-right {
+	float: right;
+}
