Don't show help panel or its button in printable version of page
Bug: T316377
Change-Id: I42cab133f16738c16cc6e03220676c5d47e43780

--- a/modules/ext.growthExperiments.HelpPanel/HelpPanelCta.less
+++ b/modules/ext.growthExperiments.HelpPanel/HelpPanelCta.less
@@ -1,4 +1,8 @@
 .mw-ge-help-panel-cta {
+	// Don't show the help panel in printable versions of a page.
+	@media print {
+		display: none;
+	}
 	position: fixed;
 	bottom: 2em;
 	right: 1em;
