--- a/modules/ext.growthExperiments.HelpPanel/HelpPanelPopup.less
+++ b/modules/ext.growthExperiments.HelpPanel/HelpPanelPopup.less
@@ -4,6 +4,10 @@
 @help-panel-position-bottom: 6em;
 
 .mw-ge-help-panel-widget-overlay {
+	// Since we don't show the help panel button in print media, let's hide the panel too.
+	@media print {
+		display: none;
+	}
 	position: fixed;
 	right: 1em;
 	bottom: @help-panel-position-bottom;
