MentorTools: Make the link to QuitMentorship easier to find
This replaces the info icon in the Mentor tools module
with an ellipsis menu widget, to make it more obvious
that it empowers mentors to take a specific action.

We decided against putting it into the "Status" dropdown,
so we don't accidentally tell mentors to quit, when a temporary
mentoring-vacation is what they were originally looking for.

Bug: T312122
Change-Id: I2f10598e02b5059c8016c70cb18c9fc768f64b42

--- a/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
+++ b/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
@@ -7,10 +7,10 @@
 .growthexperiments-mentor-dashboard-container .growthexperiments-mentor-dashboard-module-mentor-tools {
 	position: relative;
 
-	#growthexperiments-mentor-dashboard-module-mentor-tools-info-icon {
+	#growthexperiments-mentor-dashboard-module-mentor-tools-cog-menu {
 		position: absolute;
 		top: 10px;
-		right: 0;
+		right: 10px;
 	}
 
 	h4 {
