--- a/modules/vue-components/variables.less
+++ b/modules/vue-components/variables.less
@@ -64,7 +64,16 @@
 @transition-duration-medium: 250ms;
 @transition-property-base: background-color, color, border-color, box-shadow;
 
-// Fonts
+// Fonts (WIP https://www.figma.com/file/X8pKlndyPaqZg4I3GubQs6/Typography)
+
+/// Typographic scale
+@font-size-80: 0.75em; // 12px
+@font-size-90: 0.875em; // 14px
+@font-size-100: 1em; // 16px
+@font-size-110: 1.125em; // 18px
+@font-size-125: 1.25em; // 20px
+@font-size-150: 1.5em; // 24px
+@font-size-175: 1.75em; // 28px
 
 /// Font weight
 @font-weight-hairline: 100;
