User impact: add top edited articles section
* Add article list vue components
* Add the same logic from Impact::getImage in
ComputedUserImpactLookup and call it from getPageViewData
to add the thumbnail image urls.
* Create pageviews urls in the UserImpactHandler
using the wiki project name and content language
as project and interface language respectively
* Remove CLink component since Codex approach is
to have functional mixins for it

Bug: T313310
Change-Id: Ia6cc2cba67026c796c9bbd7b3f200e001ead54e3

--- a/modules/vue-components/variables.less
+++ b/modules/vue-components/variables.less
@@ -101,3 +101,9 @@
 .ext-growthExperiments-utils__pull-right {
 	float: right;
 }
+
+.disabled-visited() {
+	&:visited {
+		color: @color-progressive;
+	}
+}
