--- a/modules/utils/variables.less
+++ b/modules/utils/variables.less
@@ -6,8 +6,11 @@
 @homepageLayoutNarrowBreakpoint: 992px;
 
 @easyColor: #14866d;
+@easyBackgroundColor: #d5fdf4;
 @mediumColor: #ac6600;
+@mediumBackgroundColor: #fef6e7;
 @hardColor: #b32424;
+@hardBackgroundColor: #fee7e6;
 
 @suggestedEditsBackgroundColor: rgba( 234, 243, 255, 0.5 );
 @suggestedEditsOpaqueBackgroundColor: #f4f9ff;
