Mentor dashboard: merge ext.growthExperiments.MentorDashboard.Vue in MentorDashboard
- Move less files under /styles directory and add stylelint disable
rules for the selector-pattern rule hoping they are evntually fixed.
We could also set the rule to just yield warnings.
- Merge the require statements of MenteeOverview and MentorTools in
the same init file.

This commit can probably be squashed with the prior to make an eventual
revert easier.

Bug: T318254
Change-Id: I8e4a9bb3a794aafc156de415112c2e16572c3a24

--- a/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
+++ b/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
@@ -1,7 +1,9 @@
 @import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
 @import '../../utils/mixins.less';
-@import '../variables.less';
+@import '../styles/variables.less';
 
+/* stylelint-disable selector-class-pattern */
+/* stylelint-disable selector-max-id */
 // .growthexperiments-mentor-dashboard-container is here only to make the resulting selector
 // specific enough for browsers to prefer rules that are here.
 .growthexperiments-mentor-dashboard-container .growthexperiments-mentor-dashboard-module-mentor-tools {
@@ -65,7 +67,7 @@
 		margin: 0 @mentorDashboardModulePadding * -1 @mentorDashboardModulePadding * -1;
 		padding: 0 @mentorDashboardModulePadding @mentorDashboardModulePadding;
 		background-color: @wmui-color-base90;
-
+		/* stylelint-disable-next-line no-descending-specificity */
 		h4 {
 			padding-top: 17px;
 		}
@@ -77,3 +79,4 @@
 		}
 	}
 }
+/* stylelint-enable */
