--- a/modules/ext.growthExperiments.MentorDashboard/styles/MenteeOverview.less
+++ b/modules/ext.growthExperiments.MentorDashboard/styles/MenteeOverview.less
@@ -1,9 +1,9 @@
 @import '../../vue-components/variables.less';
-@import '../../ext.growthExperiments.MentorDashboard/variables.less';
+@import './variables.less';
 
-// stylelint-disable selector-class-pattern
+/* stylelint-disable selector-class-pattern */
 
-.growthexperiments-mentor-dashboard-module-mentee-overview-vue {
+.growthexperiments-mentor-dashboard-module-mentee-overview {
 	h4 {
 		color: @color-subtle;
 	}
@@ -19,3 +19,4 @@
 		}
 	}
 }
+/* stylelint-enable */
