--- a/modules/ext.growthExperiments.MentorDashboard/styles/MentorDashboard.less
+++ b/modules/ext.growthExperiments.MentorDashboard/styles/MentorDashboard.less
@@ -1,5 +1,6 @@
 @import 'mediawiki.mixins';
 
+/* stylelint-disable selector-class-pattern */
 .client-js .growthexperiments-mentor-dashboard-no-js-fallback {
 	display: none;
 }
@@ -16,3 +17,4 @@
 .growthexperiments-mentor-dashboard-group-sidebar {
 	.flex( 1, 1, 300px );
 }
+/* stylelint-enable */
