--- a/modules/ext.growthExperiments.MentorDashboard/styles/Resources.less
+++ b/modules/ext.growthExperiments.MentorDashboard/styles/Resources.less
@@ -1,3 +1,4 @@
+/* stylelint-disable selector-class-pattern */
 .growthexperiments-mentor-dashboard-module-resources {
 	.icon-references {
 		opacity: 0.66;
@@ -9,3 +10,4 @@
 		padding-top: 26px;
 	}
 }
+/* stylelint-enable */
