--- a/modules/ext.growthExperiments.MentorDashboard/styles/BaseModule.less
+++ b/modules/ext.growthExperiments.MentorDashboard/styles/BaseModule.less
@@ -1,8 +1,9 @@
 @import 'mediawiki.ui/variables';
-@import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../utils/mixins.less';
-@import 'variables.less';
+@import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
+@import '../../utils/mixins.less';
+@import './variables.less';
 
+/* stylelint-disable selector-class-pattern */
 // .growthexperiments-mentor-dashboard-container is here only to make the resulting selector
 // specific enough for browsers to prefer rules that are here.
 .growthexperiments-mentor-dashboard-container .growthexperiments-mentor-dashboard-module {
@@ -32,3 +33,4 @@
 		padding-bottom: 8px;
 	}
 }
+/* stylelint-enable */
