--- a/modules/ext.growthExperiments.MentorDashboard/styles/Discovery.less
+++ b/modules/ext.growthExperiments.MentorDashboard/styles/Discovery.less
@@ -1,3 +1,5 @@
+/* stylelint-disable selector-class-pattern */
+/* stylelint-disable selector-max-id */
 #pt-mentordashboard a {
 	position: relative;
 
@@ -7,3 +9,4 @@
 		bottom: -5px;
 	}
 }
+/* stylelint-enable */
