NewImpact: Set minimum height for mobile overlay summary
Bug: T323572
Change-Id: I4b96a74f91df2bbb8d0651440163e57e2b68b142

--- a/modules/ext.growthExperiments.Homepage.styles/Homepage.less
+++ b/modules/ext.growthExperiments.Homepage.styles/Homepage.less
@@ -145,6 +145,13 @@ body.mw-special-Homepage {
 					}
 				}
 			}
+
+			// NewImpact module is rendered on client-side only; set a minimum height based on what we
+			// think its rendered height will be.
+			// TODO: When the old impact module is retired, this selector can be changed to &-impact
+			.growthexperiments-homepage-module-new-impact {
+				min-height: 228px;
+			}
 		}
 	}
 
