NewImpact: Set minimum height for activated desktop module
Bug: T323572
Change-Id: I370de0244cbab872e360f1987c753c5103cfee7a

--- a/modules/ext.growthExperiments.Homepage.styles/Homepage.less
+++ b/modules/ext.growthExperiments.Homepage.styles/Homepage.less
@@ -194,6 +194,13 @@ body.mw-special-Homepage {
 					min-height: 631.533px;
 				}
 			}
+
+			// TODO: Can switch to -impact when old impact module is retired.
+			.growthexperiments-homepage-module-new-impact {
+				// This value approximates the height when a single article has been edited and the
+				// module is rendering in "wide" mode.
+				min-height: 550px;
+			}
 		}
 	}
 
