NewImpact: Set minimum height for unactivated desktop
Bug: T323572
Change-Id: I28896b8253dff8f5aec59c61871415b63b63df6d

--- a/modules/ext.growthExperiments.Homepage.styles/Homepage.less
+++ b/modules/ext.growthExperiments.Homepage.styles/Homepage.less
@@ -201,6 +201,13 @@ body.mw-special-Homepage {
 				// module is rendering in "wide" mode.
 				min-height: 550px;
 			}
+
+			// TODO: Can remove the &-new-impact selector when the old impact module is retired.
+			.growthexperiments-homepage-module-new-impact.growthexperiments-homepage-module-impact-unactivated-desktop {
+				min-height: 370px;
+				// Less jarring to have the background match the background of the contents.
+				background-color: @colorGray15;
+			}
 		}
 	}
 
