Mentorship: dont flip mentor icon on Yiddish
Bug: T287248
Change-Id: Iae8c745e669365178cebe0a8de247b546e3eb800

--- a/modules/ext.growthExperiments.Help/HelpPanelHomeButtonWidget.less
+++ b/modules/ext.growthExperiments.Help/HelpPanelHomeButtonWidget.less
@@ -78,7 +78,8 @@
 	}
 
 	.oo-ui-icon-mentor {
-		html:lang( he ) & {
+		html:lang( he ) &,
+		html:lang( yi ) & {
 			// Use LTR asset for Hebrew since it contains a question mark
 			/* @noflip */
 			background-image: url( ../../images/mentor-ltr.svg );
