NewImpact: show popover instead of tooltip in the clock icon
-Allow to navigate to the clock icon using the keyboard by wrapping in
button
-Create CPopover as more general use replacement for CInfoBox.
The button icon is passed as a named slot #trigger which has
click event listener to toggle the popover. Also emit a @toggle
event with the open/close state.
-Add missing instrumentation for clock icon toggle interaction
-Prefer color to opacity to style icons
-Add mixin to style Codex icon-only buttons consistently

Bug: T322841
Change-Id: I8eedf630c58630fb1c60f8c860cfabb65735f8c3

--- a/modules/vue-components/variables.less
+++ b/modules/vue-components/variables.less
@@ -99,6 +99,33 @@
 	padding: 0;
 }
 
+/*
+* Mixin to facilitate the color and size styling of Codex
+* icon-only buttons (type quiet + icon inside). eg:
+* <cdx-button type="quiet">
+*   <cdx-icon :icon"cdxIconClose">
+* </cdx-button>
+* Use the mixin in the button class instead of passing
+* specific class for the button AND the icon.
+*/
+/* stylelint-disable selector-class-pattern */
+.codex-icon-only-button( @color: @color-accessory, @size: 20px ) {
+	// Overwrite .cdx-button:enabled color
+	&.cdx-button {
+		color: @color;
+
+		.cdx-icon {
+			color: @color;
+
+			> svg {
+				width: @size;
+				height: @size;
+			}
+		}
+	}
+}
+/* stylelint-enable selector-class-pattern */
+
 // Helpers
 .ext-growthExperiments-utils__pull-right {
 	float: right;
