User impact: Show discovery notice to mobile users
Bug: T323619
Change-Id: I332ea08de0d7dc199cf89c4fbe3f8a96edcae31c

--- a/modules/ext.growthExperiments.Homepage.styles/ImpactModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/ImpactModule.less
@@ -250,3 +250,51 @@
 		}
 	}
 }
+
+.overlay-enabled {
+	.drawer.homepage-newimpact-discovery {
+		// Override MobileFrontend, which wants to hide the drawer
+		// on an overlay.
+		display: block !important; // stylelint-disable-line declaration-no-important
+	}
+
+	.drawer-container {
+		// Display over Minerva's overlay content (@z-indexOverOverlay: 4).
+		z-index: 5;
+		position: relative;
+	}
+}
+
+.drawer.homepage-newimpact-discovery {
+	// Needed to provide a solid background to the 50% fade on suggested
+	// edits background color used with main drawer contents.
+	background-color: @colorBaseInverted;
+	padding: 16px;
+
+	main {
+		background-color: fade( rgba( 234, 243, 255, 0.5 ), 50 );
+		padding: 16px;
+		margin: -16px;
+
+		h4 {
+			font-size: 1.1em;
+			font-weight: bold;
+			text-align: left;
+		}
+
+		p {
+			font-size: 0.875em;
+			text-align: left;
+			padding: 8px 0;
+		}
+
+		footer {
+			background-color: @colorBaseInverted;
+			min-height: 48px;
+			text-align: center;
+			font-weight: bold;
+			padding: 16px 0;
+			margin: 0 -16px -16px -16px;
+		}
+	}
+}
