User impact: Add thanks and longest streak scorecards to the unactivated state
- Rename label-info slot to info-content in ScoreCard.vue which will
  render the slotted content inside a popover. Prior to the change the
  popover had to be added to the slotted content.
- Move NewImpact styles for the server render located in Homepage.less
  and App.less to styles/NewImpact.less.
- Rework NoEditsDisplay test: the snapshot seems hard to debug given the
  amount of markup the scorecards generate, use standard matchers.

Bug: T322850
Change-Id: I1e697eb2b354b29b1cfb697c9424beaa89410f1d

--- a/modules/ext.growthExperiments.Homepage.NewImpact/components/ScoreCards.less
+++ b/modules/ext.growthExperiments.Homepage.NewImpact/components/ScoreCards.less
@@ -1,9 +1,8 @@
 @import '../../vue-components/variables.less';
+@import '../styles/mixins.less';
 
 .ext-growthExperiments-ScoreCards {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-gap: 2px;
+	.scorecards-grid();
 	// Expand scores stripe over homepage modules padding
 	margin: 0 -16px;
 
