User impact: add skeleton markup while JavaScript loads
Place styles of components used in the server first render in
less files. Create some skeleton CSS utility classes to display
minimal content skeleton while JavaScript is loading.

The code could still be adjusted to display better skeletons for
the unactivated state and the mobile summary. In the full overlay
rendering an skeleton is not done since the view is not presented
until JS loads.

Bug: T321675
Change-Id: Ic98d374c25685cab26aa1821576cc8183e82f7c1

--- a/modules/utils/mixins.less
+++ b/modules/utils/mixins.less
@@ -1,5 +1,7 @@
+@import './variables.less';
 // displays a grey rectangle with a running gradient
-.loading-animation ( @delay ) {
+/* stylelint-disable-next-line selector-list-comma-newline-after */
+.loading-animation ( @delay, @color: @colorGray14 ) {
 	animation: loading 2s ease infinite;
 	animation-delay: @delay;
 
@@ -9,7 +11,7 @@
 		height: 100%;
 		float: left;
 		background-repeat: no-repeat;
-		background-image: linear-gradient( @colorGray14 100%, transparent 0 );
+		background-image: linear-gradient( @color 100%, transparent 0 );
 		background-size: 100% 100%;
 		background-position: 0 0;
 	}
