--- a/modules/vue-components/variables.less
+++ b/modules/vue-components/variables.less
@@ -13,6 +13,7 @@
 
 @colorGray100: #f8f9fa;
 @colorGray200: #eaecf0;
+@colorGray300: #c8ccd1;
 @colorGray400: #a2a9b1;
 @colorGray500: #72777d;
 @colorGray600: #54595d;
@@ -26,12 +27,14 @@
 
 /// Text color
 @color-base: @colorBase10;
+@color-disabled: @colorGray500;
 @color-accessory: @colorGray600;
 @color-subtle: @colorGray600;
 @color-placeholder: @colorGray500;
 @color-progressive: @colorBlue600;
 
 /// Background color
+@background-color-disabled: @colorGray300;
 @background-color-base: @colorWhite;
 @background-color-base--disabled: @colorGray200;
 @background-color-framed: @colorGray100;
