Use codex-design-tokens less variables
vue-components/variables.less is not longer needed since
codex-design-tokens can be imported from MW core resources.
Move the functions placed in variables.less in utils/mixins.less
and replace all imports. Also update names of deprecated
variables.

Bug: T328008
Change-Id: I030cf09b0e0736625316c04a86c84cc8f9580c66

--- a/modules/ext.growthExperiments.Homepage.NewImpact/components/NewImpact.less
+++ b/modules/ext.growthExperiments.Homepage.NewImpact/components/NewImpact.less
@@ -1,10 +1,12 @@
-@import '../../vue-components/variables.less';
+@import ( reference ) '../../../../../resources/lib/codex-design-tokens/theme-wikimedia-ui.less';
+@import '../../utils/mixins.less';
 
 .ext-growthExperiments-NewImpact {
 	&__section-title.ext-growthExperiments-increaseSpecificity {
 		// Use same margin from desktop vector
 		margin-top: 0.3em;
-		font-size: @font-size-100;
+		// REVIEW: avaialable tokens?
+		font-size: 1em;
 	}
 
 	&__contributions-link {
