--- a/modules/ext.growthExperiments.Homepage.NewImpact/components/ScoreCards.less
+++ b/modules/ext.growthExperiments.Homepage.NewImpact/components/ScoreCards.less
@@ -1,4 +1,5 @@
-@import '../../vue-components/variables.less';
+@import ( reference ) '../../../../../resources/lib/codex-design-tokens/theme-wikimedia-ui.less';
+@import '../../utils/mixins.less';
 @import '../styles/mixins.less';
 
 .ext-growthExperiments-ScoreCards {
