--- a/modules/ext.growthExperiments.Homepage.NewImpact/styles/NewImpact.less
+++ b/modules/ext.growthExperiments.Homepage.NewImpact/styles/NewImpact.less
@@ -5,7 +5,7 @@
  * TODO: Can switch to -impact when old impact module is retired and comply to selector pattern rule.
 */
 
-@import '../../vue-components/variables.less';
+@import ( reference ) '../../../../../resources/lib/codex-design-tokens/theme-wikimedia-ui.less';
 // When the card is filled its height is ~90px and has a top margin of 24px and bottom 16px;
 @emptyCardMinHeight: ( 90 - 24 - 16 ) * 1px;
 
