--- a/modules/utils/mixins.less
+++ b/modules/utils/mixins.less
@@ -80,3 +80,52 @@
 	word-wrap: break-word;
 	white-space: normal;
 }
+
+.disabled-visited() {
+	&:visited {
+		color: @color-progressive;
+	}
+}
+
+/*
+* Mixin to facilitate the color and size styling of Codex
+* icon-only buttons (type quiet + icon inside). eg:
+* <cdx-button type="quiet">
+*   <cdx-icon :icon"cdxIconClose">
+* </cdx-button>
+* Use the mixin in the button class instead of passing
+* specific class for the button AND the icon.
+*/
+.codex-icon-only-button( @color: @color-accessory, @size: 20px ) {
+	// Overwrite .cdx-button:enabled color
+	&.cdx-button {
+		color: @color;
+
+		.cdx-icon {
+			color: @color;
+
+			> svg {
+				width: @size;
+				height: @size;
+			}
+		}
+	}
+}
+
+.popover-base() {
+	padding: @padding-base;
+	border: @border-base;
+	box-shadow: @box-shadow-drop-medium;
+	border-radius: @border-radius-base;
+	background-color: @background-color-base;
+}
+
+.no-gutter() {
+	margin: 0;
+	padding: 0;
+}
+
+// Helpers
+.ext-growthExperiments-utils__pull-right {
+	float: right;
+}
