Suggested edits: add cta button to switch topic match mode from the no results view
Update the no results widget copy texts to display an specific
text for users who run into the zero results state by using the topic
match mode AND. And provide a cta button to switch to the topic match
mode OR.

Bug: T326579
Change-Id: I955fd03ed3683c8e2541d01e2d6ce226ea117190

--- a/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
@@ -403,6 +403,12 @@ body.mw-special-Homepage {
 			.se-card-text {
 				padding: 20px 0 0;
 			}
+
+			.se-card-link {
+				margin-top: 1em;
+				width: 100%;
+				text-align: center;
+			}
 		}
 
 		.se-card-end-of-queue {
