Post-edit: Use fixed positioning for success notice
The notice should be positioned relative to the viewport, not the
top of the page (which might be well outside the viewport).

Bug: T317819
Change-Id: I2c6f2ce3cc65c77a6147ed4fb1438966d4e5d02c

--- a/modules/ext.growthExperiments.PostEdit/PostEditDrawer.less
+++ b/modules/ext.growthExperiments.PostEdit/PostEditDrawer.less
@@ -34,7 +34,7 @@
 
 // Show a notification at the top of the page, similar to using mw.notify
 .mw-ge-postEditDrawer-toastMessageOverlay {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	right: 0;
 	height: 100%;
