Leveling up: Add try new task dialog
Conditionally show the "try new task" dialog ahead of the post-edit
dialog.

Rules:

- If the user presses "No thanks", show the post-edit dialog
- If the user presses "Try new task", then open the post-edit dialog but
  with new task type filters applied
- If the user closes the "try new task" dialog with an X, show the
  post-edit dialog

Testing notes:

- Set `$wgGELevelingUpManagerTaskTypeCountThresholdMultiple = 1;` in LocalSettings.php, and make some edits.

Follow-up:

- Instrumentation, including fixing an error with the HelpPanelLogger

Bug: T322386
Change-Id: Id80d5d3a3c8c733f555ef8041758e4575ff87f5b

--- a/modules/ext.growthExperiments.PostEdit/PostEditPanel.less
+++ b/modules/ext.growthExperiments.PostEdit/PostEditPanel.less
@@ -10,7 +10,21 @@
 	.mw-ge-help-panel-postedit-subheader2 {
 		color: @wmui-color-base10;
 		margin-bottom: 1em;
+		line-height: 1.5;
 	}
+}
+
+.mw-ge-help-panel-postedit-trynewtask-image {
+	background: url( ../../images/try-new-task-ltr.svg ) no-repeat center/40px, @wmui-color-base30;
+	background-size: cover;
+	width: 100%;
+	height: 216px;
+}
+
+.mw-ge-help-panel-postedit-trynewtask-footer {
+	background-color: fade( @wmui-color-accent90, 50% );
+	text-align: right;
+	padding: 0 16px;
 }
 
 .mw-ge-help-panel-postedit-footer {
@@ -21,6 +35,12 @@
 	text-align: center;
 	font-weight: bold;
 	border-top: 1px solid @wmui-color-base70;
+
+	&-trynewtask,
+	&-nothanks {
+		width: unset;
+		border-top: unset;
+	}
 
 	.oo-ui-buttonElement-button {
 		width: 100%;
