Generalize ScoreCard(s) Vue components
As part of the Mentor Dashboard's Personalized praise
module, the NewImpact's ScoreCards module should be used.
To make that possible, generalize the relevant Vue components.

Bug: T322443
Change-Id: Ia79944d66de8bd44ebd8500b20d547afb3dc6200

--- a/modules/vue-components/CScoreCards.less
+++ b/modules/vue-components/CScoreCards.less
@@ -1,6 +1,6 @@
-@import ( reference ) '../../../../../resources/lib/codex-design-tokens/theme-wikimedia-ui.less';
-@import '../../utils/mixins.less';
-@import '../styles/mixins.less';
+@import ( reference ) '../../../../resources/lib/codex-design-tokens/theme-wikimedia-ui.less';
+@import '../utils/mixins.less';
+@import 'mixins.less';
 
 .ext-growthExperiments-ScoreCards {
 	.scorecards-grid();
