--- a/modules/ext.growthExperiments.PostEdit/PostEditPanel.less
+++ b/modules/ext.growthExperiments.PostEdit/PostEditPanel.less
@@ -72,6 +72,14 @@
 		margin-right: 16px;
 	}
 
+	&-icon-levelingup {
+		min-width: 72px;
+		height: 72px;
+		background-image: url( ../../images/no-results.svg );
+		background-repeat: no-repeat;
+		margin-right: 16px;
+	}
+
 	&-header {
 		.rel-font-size-and-line-height( @parentFontSize: 16px, @targetFontSize: 15.4px, @targetLineHeight: 22px );
 		color: @wmui-color-base10;
