Post edit panel: do not wait for tasks request to show the panel
The post edit panel setup was deferred to the completion of
the growthtasks api request. This patch changes the behavior
to show the panel in a loading state while the request is not
complete.

The panel is initialised in a loading state and subscribes to
the NewcomerTaskStore events to update the panel main area
when the data arrives or an error occurs.

Bug: T294835
Change-Id: I727e2d356a573b20071acd816a8a0709022bc268

--- a/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
@@ -75,6 +75,14 @@
 			// is not defined yet
 			color: @wmui-color-base10;
 		}
+
+		&.skeleton {
+			.loading-animation (600ms);
+
+			&:before {
+				content: '\00a0';
+			}
+		}
 	}
 
 	&-description {
@@ -117,6 +125,10 @@
 
 		&.skeleton {
 			.loading-animation (1200ms);
+
+			&:before {
+				content: '\00a0';
+			}
 		}
 	}
 
