PostEditPanel: Adjust display of no-results image
Adjust the height and width to match the Figma spec, and make
sure the full image is shown.

Bug: T324177
Change-Id: I97e6d62717141cdbcf9150d701ce39d8318f191e

--- a/modules/ext.growthExperiments.PostEdit/PostEditPanel.less
+++ b/modules/ext.growthExperiments.PostEdit/PostEditPanel.less
@@ -73,10 +73,11 @@
 	}
 
 	&-icon-levelingup {
-		min-width: 72px;
-		height: 72px;
+		min-width: 70px;
+		height: 70px;
 		background-image: url( ../../images/no-results.svg );
 		background-repeat: no-repeat;
+		background-size: 70px;
 		margin-right: 16px;
 	}
 
