--- a/modules/ext.growthExperiments.LevelingUp.InviteToSuggestedEdits/InviteToSuggestedEdits.less
+++ b/modules/ext.growthExperiments.LevelingUp.InviteToSuggestedEdits/InviteToSuggestedEdits.less
@@ -20,6 +20,7 @@
 		height: 0;
 		padding-bottom: 128/360 * 100%;
 		margin-bottom: 16px;
+		border: 1px solid @wmui-color-base70;
 		background: url( ../../images/suggestededits/leveling-up-ltr.svg ) no-repeat top center;
 		background-size: contain;
 	}
