styles: Replace deprecated WikimediaUI Base aliases with Codex tokens
In Codex v0.7.0 we're removing the deprecated aliases for
backwards-compatibility with WikimediaUI Base from Codex design tokens.
Therefore the build is failing as GrowthExperiments have featured
a number of those deprecated aliases.
All occurrences should be removed with a 1:1 replacement, no visual
changes should be expected.

Bug: T332120
Change-Id: I793a4cbe51729e93e070434d40a6031fb183f9e6

--- a/modules/ext.growthExperiments.MentorDashboard/styles/MenteeOverview.less
+++ b/modules/ext.growthExperiments.MentorDashboard/styles/MenteeOverview.less
@@ -12,7 +12,7 @@
 		// to get out of padding set to the module's container div and be able to apply background-color edge-to-edge
 		margin: 0 @mentorDashboardModulePadding * -1 @mentorDashboardModulePadding * -1;
 		padding: 0 @mentorDashboardModulePadding @mentorDashboardModulePadding;
-		background-color: @background-color-framed;
+		background-color: @background-color-interactive-subtle;
 
 		h4 {
 			padding-top: 16px;
