--- a/modules/ext.growthExperiments.Homepage.NewImpact/styles/NewImpact.less
+++ b/modules/ext.growthExperiments.Homepage.NewImpact/styles/NewImpact.less
@@ -44,7 +44,7 @@
 				left: 0;
 				bottom: 0;
 				right: 0;
-				background-color: @background-color-framed;
+				background-color: @background-color-interactive-subtle;
 				z-index: -1;
 			}
 		}
