--- a/modules/utils/mixins.less
+++ b/modules/utils/mixins.less
@@ -89,8 +89,8 @@
 
 /*
 * Mixin to facilitate the color and size styling of Codex
-* icon-only buttons (type quiet + icon inside). eg:
-* <cdx-button type="quiet">
+* icon-only buttons (weight quiet + icon inside). eg:
+* <cdx-button weight="quiet">
 *   <cdx-icon :icon"cdxIconClose">
 * </cdx-button>
 * Use the mixin in the button class instead of passing
